I have been fine tuning some of the layout issues especially responsveness of the title and 3 columns at the top of the home page.

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -21,8 +21,8 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 
 // Width of the content area
 $content-width:    1000px !default;
-
-$on-palm:          600px !default;
+$on-phone:		   435px !default;
+$on-palm:          640px !default;
 $on-laptop:        1000px !default;
 
 //break points for screen sizes and changes to layout
